--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
                 <div class="mt-12">
                     <p class="text-slate-400 mb-4">Or reach out via social media:</p>
                     <div class="flex justify-center space-x-4">
-                        <a href="https://wa.me/6281912537616" target="_blank" class="social-link" id="whatsapp"><i data-feather="message-circle" class="w-6 h-6"></i></a>
-                        <a href="https://instagram.com/maaafiqs" target="_blank" class="social-link" id="instagram"><i data-feather="instagram" class="w-6 h-6"></i></a>
+                        <a href="" target="_blank" class="social-link" id="whatsapp"><i data-feather="message-circle" class="w-6 h-6"></i></a>
+                        <a href="" target="_blank" class="social-link" id="instagram"><i data-feather="instagram" class="w-6 h-6"></i></a>
                         <a href="mailto:syafiqyusuf0308@gmail.com" target="_blank" class="social-link" id="gmail"><i data-feather="mail" class="w-6 h-6"></i></a>
                     </div>
                 </div>
@@ -558,3 +558,4 @@
 </body>
 
 </html>
+
