--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
                 <div class="certificate-item"><img src="Sertif 1.png" onerror="this.onerror=null;this.src='https://placehold.co/300x200/0f172a/334155?text=Sertifikat';" alt="Certificate 1" class="rounded-md"></div>
                 <div class="certificate-item"><img src="Sertif 2.png" onerror="this.onerror=null;this.src='https://placehold.co/300x200/0f172a/334155?text=Sertifikat';" alt="Certificate 2" class="rounded-md"></div>
-                <div class="certificate-item"><img src="Sertif 3.png" onerror="this.onerror=null;this.src='https://placehold.co/300x200/0f172a/334155?text=Sertifikat';" alt="Certificate 3" class="rounded-md"></div>
+                <div class="certificate-item"><img src="" onerror="this.onerror=null;this.src='https://placehold.co/300x200/0f172a/334155?text=Sertifikat';" alt="Certificate 3" class="rounded-md"></div>
                 <div class="certificate-item"><img src="Sertif 4.png" onerror="this.onerror=null;this.src='https://placehold.co/300x200/0f172a/334155?text=Sertifikat';" alt="Certificate 4" class="rounded-md"></div>
                 <div class="certificate-item"><img src="Sertif 5.png" onerror="this.onerror=null;this.src='https://placehold.co/300x200/0f172a/334155?text=Sertifikat';" alt="Certificate 5" class="rounded-md"></div>
             </div>
@@ -558,4 +558,5 @@
 </body>
 
 </html>
+
 
