--- a/aplikasi.html
+++ b/aplikasi.html
@@ -215,6 +215,19 @@
                     </div>
                 </a>
 
+                <!-- MODIFIED: App Card 5 -->
+                <a href="#" class="app-card block">
+                    <img src="app5.png" 
+                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=App+5';" 
+                         alt="Application 5" class="w-full h-48 object-cover rounded-t-lg">
+                    <div class="p-6">
+                        <h3 id="app5Title" class="text-xl font-bold mb-2 text-white">Hospital Item Damage Reporting System</h3>
+                        <p id="app5Desc" class="text-slate-400">
+                            An application used to report damaged items within the hospital environment to the relevant department for repairs.
+                        </p>
+                    </div>
+                </a>
+
             </div>
         </section>
 
@@ -297,6 +310,8 @@
                 app3Desc: "A concrete calculator application designed for use in the field of civil engineering to estimate material quantities.",
                 app4Title: "Reservation of Mini Soccer Field Information System",
                 app4Desc: "An Information System for a mini soccer sport services.",
+                app5Title: "Hospital Item Damage Reporting System",
+                app5Desc: "An application used to report damaged items within the hospital environment to the relevant department for repairs.",
                 backButton: "Back",
                 footerText: "© 2025 Muhammad Syafiq Yusuf. All rights reserved."
             },
@@ -311,6 +326,8 @@
                 app3Desc: "Aplikasi kalkulator beton yang dirancang untuk digunakan dalam bidang teknik sipil untuk memperkirakan jumlah material.",
                 app4Title: "Sistem Informasi Reservasi Lapangan Mini Soccer",
                 app4Desc: "Sebuah Sistem Informasi untuk layanan olahraga mini soccer.",
+                app5Title: "Sistem Pelaporan Kerusakan Barang Rumah Sakit",
+                app5Desc: "Aplikasi yang digunakan untuk melaporkan kerusakan barang di lingkungan rumah sakit kepada bagian terkait untuk dilakukan perbaikan.",
                 backButton: "Kembali",
                 footerText: "© 2025 Muhammad Syafiq Yusuf. Hak cipta dilindungi undang-undang."
             }
@@ -325,6 +342,7 @@
                 'app2Title': t.app2Title, 'app2Desc': t.app2Desc,
                 'app3Title': t.app3Title, 'app3Desc': t.app3Desc,
                 'app4Title': t.app4Title, 'app4Desc': t.app4Desc,
+                'app5Title': t.app5Title, 'app5Desc': t.app5Desc,
                 'backButton': t.backButton, 'footerText': t.footerText
             };
             for (const id in elements) {
