update aplikasi 5 dan 6

--- a/aplikasi.html
+++ b/aplikasi.html
@@ -228,6 +228,19 @@
                     </div>
                 </a>
 
+                <!-- MODIFIED: App Card 6 -->
+                <a href="enigma.html" class="app-card block">
+                    <img src="enigma_preview.png" 
+                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=Enigma';" 
+                         alt="Application 6" class="w-full h-48 object-cover rounded-t-lg">
+                    <div class="p-6">
+                        <h3 id="app6Title" class="text-xl font-bold mb-2 text-white">Enigma Machine Simulator</h3>
+                        <p id="app6Desc" class="text-slate-400">
+                            A web-based simulation of the famous Enigma M4 encryption machine used during World War II.
+                        </p>
+                    </div>
+                </a>
+
             </div>
         </section>
 
@@ -312,6 +325,8 @@
                 app4Desc: "An Information System for a mini soccer sport services.",
                 app5Title: "Hospital Item Damage Reporting System",
                 app5Desc: "An application used to report damaged items within the hospital environment to the relevant department for repairs.",
+                app6Title: "Enigma Machine Simulator",
+                app6Desc: "A web-based simulation of the famous Enigma M4 encryption machine used during World War II.",
                 backButton: "Back",
                 footerText: "© 2025 Muhammad Syafiq Yusuf. All rights reserved."
             },
@@ -328,6 +343,8 @@
                 app4Desc: "Sebuah Sistem Informasi untuk layanan olahraga mini soccer.",
                 app5Title: "Sistem Pelaporan Kerusakan Barang Rumah Sakit",
                 app5Desc: "Aplikasi yang digunakan untuk melaporkan kerusakan barang di lingkungan rumah sakit kepada bagian terkait untuk dilakukan perbaikan.",
+                app6Title: "Simulator Mesin Enigma",
+                app6Desc: "Simulasi berbasis web dari mesin enkripsi Enigma M4 yang terkenal digunakan selama Perang Dunia II.",
                 backButton: "Kembali",
                 footerText: "© 2025 Muhammad Syafiq Yusuf. Hak cipta dilindungi undang-undang."
             }
@@ -343,6 +360,7 @@
                 'app3Title': t.app3Title, 'app3Desc': t.app3Desc,
                 'app4Title': t.app4Title, 'app4Desc': t.app4Desc,
                 'app5Title': t.app5Title, 'app5Desc': t.app5Desc,
+                'app6Title': t.app6Title, 'app6Desc': t.app6Desc,
                 'backButton': t.backButton, 'footerText': t.footerText
             };
             for (const id in elements) {
