--- a/aplikasi.html
+++ b/aplikasi.html
@@ -192,11 +192,11 @@
                 <!-- MODIFIED: App Card 3 is now a clickable link -->
                 <a href="kalkulator_super.html" class="app-card block">
                     <img src="app3.png" 
-                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=App+2';" 
-                         alt="Application 2" class="w-full h-200 object-cover rounded-t-lg">
+                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=App+3';" 
+                         alt="Application 3" class="w-full h-200 object-cover rounded-t-lg">
                     <div class="p-6">
-                        <h3 id="app2Title" class="text-xl font-bold mb-2 text-white">Aplikasi Kalkulator Super Lengkap</h3>
-                        <p id="app2Desc" class="text-slate-400">
+                        <h3 id="app3Title" class="text-xl font-bold mb-2 text-white">Aplikasi Kalkulator Super Lengkap</h3>
+                        <p id="app3Desc" class="text-slate-400">
                             Kalkulator super lengkap yang dilengkapi banyak fitur untuk perhitungan matematika dan fisika.
                         </p>
                     </div>
@@ -206,7 +206,7 @@
                 <a href="minisoccer-reservation-app.html" class="app-card block">
                     <img src="app4.png" 
                          onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=App+4';" 
-                         alt="Application 4" class="w-full h-48 object-cover rounded-t-lg">
+                         alt="Application 4" class="w-full h-200 object-cover rounded-t-lg">
                     <div class="p-6">
                         <h3 id="app4Title" class="text-xl font-bold mb-2 text-white">Reservation of Mini Soccer Field Information System</h3>
                         <p id="app4Desc" class="text-slate-400">
@@ -219,7 +219,7 @@
                 <a href="#" class="app-card block">
                     <img src="app5.png" 
                          onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=App+5';" 
-                         alt="Application 5" class="w-full h-48 object-cover rounded-t-lg">
+                         alt="Application 5" class="w-full h-200 object-cover rounded-t-lg">
                     <div class="p-6">
                         <h3 id="app5Title" class="text-xl font-bold mb-2 text-white">Hospital Item Damage Reporting System</h3>
                         <p id="app5Desc" class="text-slate-400">
@@ -230,9 +230,9 @@
 
                 <!-- MODIFIED: App Card 6 -->
                 <a href="enigma.html" class="app-card block">
-                    <img src="enigma_preview.png" 
+                    <img src="app6.png" 
                          onerror="this.onerror=null;this.src='https://placehold.co/600x400/0f172a/e2e8f0?text=Enigma';" 
-                         alt="Application 6" class="w-full h-48 object-cover rounded-t-lg">
+                         alt="Application 6" class="w-full h-200 object-cover rounded-t-lg">
                     <div class="p-6">
                         <h3 id="app6Title" class="text-xl font-bold mb-2 text-white">Enigma Machine Simulator</h3>
                         <p id="app6Desc" class="text-slate-400">
@@ -319,8 +319,8 @@
                 app1Desc: "Used for teaching and learning activities in schools, this application is used to regularly select group members for group assignments.",
                 app2Title: "Dental Health Information System",
                 app2Desc: "An Information System for a dental health organization to facilitate and streamline dental services.",
-                app3Title: "Concrete Calculator",
-                app3Desc: "A concrete calculator application designed for use in the field of civil engineering to estimate material quantities.",
+                app3Title: "Super Complete Calculator",
+                app3Desc: "A comprehensive calculator application featuring scientific, physics, and unit conversion tools.",
                 app4Title: "Reservation of Mini Soccer Field Information System",
                 app4Desc: "An Information System for a mini soccer sport services.",
                 app5Title: "Hospital Item Damage Reporting System",
@@ -337,8 +337,8 @@
                 app1Desc: "Digunakan untuk kegiatan belajar mengajar di sekolah, aplikasi ini digunakan untuk melakukan pemilihan anggota kelompok secara teratur dalam tugas kelompok.",
                 app2Title: "Sistem Informasi Kesehatan Gigi",
                 app2Desc: "Sebuah Sistem Informasi untuk organisasi kesehatan gigi untuk memfasilitasi dan menyederhanakan layanan dokter gigi.",
-                app3Title: "Kalkulator Beton",
-                app3Desc: "Aplikasi kalkulator beton yang dirancang untuk digunakan dalam bidang teknik sipil untuk memperkirakan jumlah material.",
+                app3Title: "Kalkulator Super Lengkap",
+                app3Desc: "Aplikasi kalkulator super lengkap yang dilengkapi fitur ilmiah, fisika, dan konversi satuan.",
                 app4Title: "Sistem Informasi Reservasi Lapangan Mini Soccer",
                 app4Desc: "Sebuah Sistem Informasi untuk layanan olahraga mini soccer.",
                 app5Title: "Sistem Pelaporan Kerusakan Barang Rumah Sakit",
